--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
   <head><meta name="google-site-verification" content="nF-rFLXhXTnUiRTssBYoHdFNwuxDhh5IPCh-bDo3GGs" /></head>
-  <body>under construction</body>
+  <body>under construction
+  <p><a href="https://youtyay.github.io/ipclock" target="_blank" style="color: #007bff; text-decoration: none;">ipclock</a></p>
+  <p><a href="https://youtyay.github.io/SAF" target="_blank" style="color: #007bff; text-decoration: none;">saf</a></p>
+  </body>
 </html>
